test/compilable/test22714.d
// https://issues.dlang.org/show_bug.cgi?id=22714
import imports.test22714a;
