test/fail_compilation/fail7524b.d
// https://issues.dlang.org/show_bug.cgi?id=7524

#line 47 __VERSION__
